test/fail/CheatSubtypingPos.ma
-- 2010-07-11

let MakePos : (-Set -> Set) -> (+Set -> Set) = \ F -> F
